# eunomia

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  athena.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
crates/eunomia-audit/: Cargo.toml
crates/eunomia-audit/src/: event.rs  lib.rs  logger.rs  schema.rs
crates/eunomia-cli/: Cargo.toml
crates/eunomia-cli/src/: main.rs
crates/eunomia-cli/src/commands/: build.rs  fetch.rs  mod.rs  publish.rs  push.rs  rollback.rs  sign.rs  status.rs  test.rs  validate.rs
crates/eunomia-compiler/: Cargo.toml
crates/eunomia-compiler/src/: analyzer.rs  bundler.rs  engine.rs  error.rs  lib.rs  lint.rs  optimizer.rs  parser.rs  semantic.rs  validator.rs
crates/eunomia-compiler/tests/: integration_test.rs
crates/eunomia-core/: Cargo.toml  README.md
crates/eunomia-core/src/: bundle.rs  decision.rs  error.rs  identity.rs  input.rs  lib.rs  policy.rs  proptest_tests.rs  signing.rs  validation.rs
crates/eunomia-distributor/: Cargo.toml  build.rs
crates/eunomia-distributor/benches/: distribution_bench.rs
crates/eunomia-distributor/src/: config.rs  discovery.rs  error.rs  events.rs  health.rs  instance.rs  lib.rs  pusher.rs  rollback.rs  scheduler.rs  state.rs  strategy.rs
crates/eunomia-distributor/src/grpc/: control_plane.rs  mod.rs  policy_receiver.rs  rate_limit.rs  server.rs  types.rs
crates/eunomia-distributor/tests/: e2e_flow.rs  error_scenarios.rs  grpc_integration.rs  load_test.rs  mtls_integration.rs
crates/eunomia-metrics/: Cargo.toml
crates/eunomia-metrics/src/: compiler.rs  distributor.rs  lib.rs  registry.rs  server.rs
crates/eunomia-registry/: Cargo.toml
crates/eunomia-registry/src/: cache.rs  client.rs  config.rs  error.rs  lib.rs  oci.rs  version.rs
crates/eunomia-test/: Cargo.toml
crates/eunomia-test/src/: coverage.rs  discovery.rs  error.rs  fixtures.rs  lib.rs  mock_identity.rs  reporter.rs  runner.rs  test_utils.rs
crates/eunomia-test/tests/: integration_test.rs
docs/: ARCHITECTURE.md  WEEK-21-PLANNING.md  deployment-guide.md  design.md  migration-guide.md  performance-guide.md  policy-authoring-guide.md  roadmap.md  spec.md  testing-guide.md  troubleshooting-guide.md
docs/designs/: external-data-integration.md  policy-inheritance.md
docs/examples/: README.md
docs/examples/basic-rbac/: README.md  authz.rego  eunomia.toml
docs/examples/basic-rbac/data/: roles.json
docs/examples/basic-rbac/tests/: authz_test.rego
docs/examples/microservices/: README.md  authz.rego  eunomia.toml  service_mesh.rego
docs/examples/microservices/data/: service_registry.json
docs/examples/microservices/tests/: authz_test.rego
docs/examples/multi-tenant/: README.md  authz.rego  eunomia.toml  tenant.rego
docs/examples/multi-tenant/data/: permissions.json
docs/examples/multi-tenant/tests/: authz_test.rego
examples/policies/: README.md
examples/policies/api-gateway/: README.md  authz.rego  authz_test.rego
examples/policies/common/: authz.rego  authz_test.rego
examples/policies/multi-tenant/: README.md  authz.rego  authz_test.rego
examples/policies/orders-service/: authz.rego  authz_test.rego
examples/policies/rbac-service/: README.md  authz.rego  authz_test.rego
examples/policies/users-service/: authz.rego  authz_fixtures.json  authz_test.rego
grafana/dashboards/: README.md  eunomia-compiler.json  eunomia-distributor.json  eunomia-overview.json
proto/: control_plane.proto
