[workspace]
resolver = "2"
members = [
    "crates/eunomia-core",
    "crates/eunomia-compiler",
    "crates/eunomia-test",
    "crates/eunomia-registry",
    "crates/eunomia-cli",
    "crates/eunomia-distributor",
    "crates/eunomia-audit",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/A-Somniatore/eunomia"
authors = ["Themis Platform Team"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Archive/compression
tar = "0.4"
flate2 = "1.0"

# Cryptography
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Rego policy engine (pure Rust OPA implementation)
regorus = "0.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.0", features = ["derive", "env"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID (for RequestId compatibility)
uuid = { version = "1.0", features = ["v7", "serde"] }

# Testing
proptest = "1.0"
tempfile = "3.15"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
url = "2.5"

# DNS resolution
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }

# File system utilities
walkdir = "2.5"
dirs = "5.0"

# Workspace crates
eunomia-core = { path = "crates/eunomia-core" }
eunomia-compiler = { path = "crates/eunomia-compiler" }
eunomia-test = { path = "crates/eunomia-test" }
eunomia-registry = { path = "crates/eunomia-registry" }
eunomia-distributor = { path = "crates/eunomia-distributor" }
eunomia-audit = { path = "crates/eunomia-audit" }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Shared platform types (from Themis team)
# NOTE: In production CI, this should use a git reference:
#   themis-platform-types = { git = "https://github.com/A-Somniatore/themis-platform-types", tag = "v0.2.0" }
# Path reference is used for local monorepo development.
themis-platform-types = { path = "../themis-platform-types" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
