[package]
name = "eunomia-cli"
description = "Command-line interface for Eunomia authorization platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "eunomia"
path = "src/main.rs"

[dependencies]
eunomia-core = { workspace = true }
eunomia-compiler = { workspace = true }
eunomia-test = { workspace = true }
eunomia-registry = { workspace = true }
eunomia-distributor = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
