[package]
name = "eunomia-compiler"
description = "Rego policy parsing and bundle compilation for Eunomia"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
eunomia-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
