[package]
name = "eunomia-registry"
description = "OCI-compatible bundle registry client for Eunomia"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Workspace crates
eunomia-core = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client
reqwest = { workspace = true }
url = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Cryptography (for digest calculation)
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# Tracing
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# File system utilities
walkdir = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
